# busiman

./: .gitignore  Cargo.toml
migrations/20170221235458_create_users/: up.sql
migrations/20170221235504_create_companies/: up.sql
migrations/20170221235513_create_sessions/: up.sql
migrations/20170221235520_create_company_devices/: down.sql  up.sql
migrations/20170307171337_create_tables/: down.sql  up.sql
panel/: index.html
src/: busiman.rs  main.rs  wakeonlan.rs
src/busiman_db/: models.rs
static/: index.html
static/index_files/: index.css
static/res/: panel.css  panel.js
